# eazy-py

./: .flake8  .gitignore  .gitmodules  .travis.yml  CHANGES.rst  CITATION.cff  LICENSE  LICENSE.txt  MANIFEST  README.md  README.rst  environment.yml  environment.yml.OLD  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  python-package.yml
binder/: requirements.txt
docs/: conf.py  index.rst  rtd-pip-requirements
docs/eazy/: api.rst  filters.rst  install.rst  photoz.rst  templates.rst  zout_columns.rst
docs/examples/: HDFN-demo.ipynb  Riverside-demo.ipynb  compare_sps_algorithm.ipynb
eazy/: __init__.py  conftest.py  filters.py  hdf5.py  igm.py  nmf.py  param.py  photoz.py  run.py  sps.py  templates.py  utils.py  version.py  visualization.py
eazy/data/: alpha_lyr_stis_008.fits  filters  hdfn_fs99  spectra_kc13_12_tweak.params  templates  zphot.param.default
eazy/tests/: test_filters.py  test_igm.py  test_param.py  test_photoz.py  test_templates.py  test_utils.py
scripts/: README.rst  nmf.py  photoz.py  run.py  sps.py
