[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
testpaths = "eazy"
norecursedirs = eazy-photoz

[ah_bootstrap]
auto_use = True

[metadata]
name = eazy
description = Pythonic photo-zs
author = G. Brammer
license = MIT
url = http://github.com/gbrammer/eazy
edit_on_github = False
github_project = gbrammer/eazy-py
description-file = README.rst
version = 0.4

[entry_points]
