[metadata]
name = eazy
author = G. Brammer
author_email = gbrammer@gmail.com
description = Pythonic photo-zs
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/gbrammer/eazy-py
license = MIT
license_files = LICENSE.txt
project_urls =
    Documentation = https://eazy-py.readthedocs.io/
    Source = https://github.com/gbrammer/eazy-py
    Tracker = https://github.com/gbrammer/eazy-py/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.7
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    peakutils
    tqdm
    h5py
    astro-sedpy
    astro-prospector
    dust_attenuation
    dust_extinction
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    flake8
docs =
    sphinx
    sphinx-astropy

[options.package_data]
eazy.data = *
eazy.data.filters = *
eazy.data.templates = *
eazy.data.hdfn_fs99 = *
eazy.data.templates.fsps_full = *
eazy.data.templates.uvista_nmf = *
eazy.data.templates.EAZY_v1.1_lines = *
eazy.data.templates.spline_templates_v2 = *
eazy.data.templates.spline_templates_v3 = *
eazy.data.templates.sfhz = *
eazy.data.templates.magdis = *

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 5.0
norecursedirs = eazy-photoz build docs/build
testpaths =
    eazy/tests
    
[flake8]
exclude = *parsetab.py,conftest.py,docs/conf.py,scripts/*