[metadata]
name = eazy
author = G. Brammer
author_email = gbrammer@gmail.com
description = Pythonic photo-zs
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/gbrammer/eazy-py
license = MIT
license_files = LICENSE.txt
project_urls =
    Documentation = https://eazy-py.readthedocs.io/
    Source = https://github.com/gbrammer/eazy-py
    Tracker = https://github.com/gbrammer/eazy-py/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.7
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    peakutils
    tqdm
    h5py
    astro-sedpy>=0.3
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    flake8
docs =
    sphinx
    sphinx-astropy
    dust_attenuation @ git+https://github.com/gbrammer/dust_attenuation.git
    dust_extinction @ git+https://github.com/gbrammer/dust_extinction.git

[options.package_data]
eazy.data = 
    *.txt
    alpha_lyr_stis_008.fits
    emlines_info.dat
    zphot.param.default
    
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 5.0
norecursedirs = eazy-photoz build docs/build
testpaths =
    eazy/tests
    
[flake8]
exclude = *parsetab.py,conftest.py,docs/conf.py,scripts/*